fix add nitice, responses, year validation
