# controllers/notices/addNotice.js
@@ -2,14 +2,27 @@ const { Notice } = require("../../models/notice");
 const { cloudinaryImgUpload } = require("../../helpers");
 
 const addNotice = async (req, res, next) => {
-  const { avatarURL, idCloudAvatar } = await cloudinaryImgUpload(req);
+  let noticeAvatarURL = null;
+  let noticeCloudAvatar = null;
+
+  if (req.file) {
+    const { avatarURL, idCloudAvatar } = await cloudinaryImgUpload(req);
+    noticeAvatarURL = avatarURL;
+    noticeCloudAvatar = idCloudAvatar;
+  }
+
   const { _id: owner } = req.user;
 
-  const notice = new Notice({ ...req.body, avatarURL, idCloudAvatar, owner });
+  const notice = new Notice({
+    ...req.body,
+    avatarURL: noticeAvatarURL,
+    idCloudAvatar: noticeCloudAvatar,
+    owner,
+  });
 
   await notice.save();
 
-  res.status(200).json(notice);
+  res.status(200).json({ notice });
 };
 
 module.exports = addNotice;
