# models/notice.js
@@ -30,6 +30,7 @@ const noticeSchema = new mongoose.Schema(
     },
     location: {
       type: String,
+      required: [true, "City/region is required"],
     },
     comments: {
       type: String,
@@ -70,7 +71,6 @@ const joiNoticesSchema = Joi.object({
   name: Joi.string().min(2).max(16).required(),
   birthday: Joi.string()
     .regex(/^([0-2][1-9]|[1-3]0|31)\.(0[1-9]|1[0-2])\.\d{4}$/)
-    .required()
     .custom((value, helpers) => {
       const day = parseInt(value.slice(0, 2));
       const month = parseInt(value.slice(3, 5));
@@ -86,7 +86,7 @@ const joiNoticesSchema = Joi.object({
         }
       }
 
-      if (year < 1000 || year > 9999) {
+      if (year < 1000 || year > 9999 || year > new Date().getFullYear()) {
         return helpers.error("any.invalid");
       }
 
@@ -100,9 +100,11 @@ const joiNoticesSchema = Joi.object({
     .required(),
   breed: Joi.string().min(2).max(24).required(),
   sex: Joi.string().required(),
-  location: Joi.string().required(),
+  location: Joi.string()
+    .regex(/^[A-Za-z\s]+,\s[A-Za-z\s]+$/)
+    .required(),
   comments: Joi.string().min(8).max(120).required(),
-  price: Joi.number(),
+  price: Joi.number().min(1),
   avatarURL: Joi.string(),
 });
 
